[package]
name = "letzpwn_bot"
version = "0.1.0"
authors = ["Alain Krier <krial057@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
hey_listen = "0.4"
white_rabbit = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = "0.9.22"
failure = "0.1.6"
base64 = "0.11.0"
uuid = { version = "0.8", features = ["v4"] }
